@@ -4,6 +4,8 @@
 - Redefined clamping values in il.h.
 - Added 64-bit integer types.
 - Fixed bug in iRegisterLoad (https://sourceforge.net/forum/message.php?msg_id=5973761).
+- Changed seek functions in il_files.c to return ILint.
+- Added rpcsal.h and sal.h #includes to ilut.h for DX10.
 
 2009-01-02 Matěj Týč <bubla@sf.net>
 	* src-{IL,ILU,ILUT}/src/*_internal.c: Hopefully resolved the
